--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -22,6 +22,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/displayname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="katy perry"
