--- a/app/src/main/res/layout/biodata_layout_item.xml
+++ b/app/src/main/res/layout/biodata_layout_item.xml
@@ -24,7 +24,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.3"
-                android:padding="@dimen/small_padding"
+                android:padding="@dimen/medium_padding"
                 android:scaleType="fitXY"
                 android:src="@drawable/fake_image"
                 />
