--- a/app/src/main/res/layout/inbox.xml
+++ b/app/src/main/res/layout/inbox.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+
     android:background="#2E3F51"
     android:layout_height="match_parent">
 
@@ -20,12 +20,33 @@
             android:gravity="center"
             android:textColor="#ffffff"
             android:background="#2E3F51"
+            android:text="@string/your_sent_request"/>
+    </android.support.v7.widget.CardView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#fff" />
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_sent_request_from_me"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:background="#2E3F51"
             android:text="@string/sent_request"/>
     </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff"></TextView>
+        android:background="#fff" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -43,10 +64,11 @@
             android:background="#2E3F51"
             android:text="@string/message"/>
     </android.support.v7.widget.CardView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff"></TextView>
+        android:background="#fff" />
 
 
 
@@ -67,10 +89,11 @@
             android:background="#2E3F51"
             android:text="@string/verification_request"/>
     </android.support.v7.widget.CardView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#fff"></TextView>
+        android:background="#fff" />
 
 
     <android.support.v7.widget.CardView
@@ -89,6 +112,7 @@
             android:background="#2E3F51"
             android:text="@string/expire_request"/>
     </android.support.v7.widget.CardView>
+
 
 
 
