--- a/app/src/main/res/layout/custom_tab_item2.xml
+++ b/app/src/main/res/layout/custom_tab_item2.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/badge_notification_4"
+            android:id="@+id/communication_notification_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -21,7 +21,7 @@
             android:textColor="#000"
             android:textSize="8sp"
             android:textStyle="bold"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
 
         <TextView
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/small_margin"
-            android:layout_toLeftOf="@+id/badge_notification_4"
+            android:layout_toLeftOf="@+id/communication_notification_textview"
             android:paddingRight="@dimen/small_padding"
             android:text="যোগাযোগের অনুরোধ"
             android:textColor="#FF353333"
