--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,15 +32,14 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="wrap_content"
                     app:layout_collapseMode="parallax">
 
                     <ImageView
                         android:id="@+id/userProfileImage"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/profile_pic" />
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/profile_pic"/>
 
                     <RelativeLayout
                         android:layout_width="match_parent"
