fix the issue of set_request_to_me_from_other

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -37,7 +37,7 @@
                     android:id="@+id/nav_faq"
                     android:title="@string/nav_faq" />
                 <item
-                    android:id="@+id/nav_policy"
+                    android:id="@+id/nav_termsofuse"
                     android:title="@string/nav_termsofuse" />
 
                 <item
