--- a/app/src/main/res/layout/request_sent_from_me.xml
+++ b/app/src/main/res/layout/request_sent_from_me.xml
@@ -22,6 +22,14 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:visibility="visible" />
+    <TextView
+        android:id="@+id/no_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="No Request Found"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"/>
 
 
     <android.support.v7.widget.RecyclerView
