--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -312,7 +312,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/medium_padding"
-                            android:text="hello world"
+                            android:text=""
                             android:textColor="#4e4c4c"
                             android:textSize="@dimen/item_textsize"
                             android:textStyle="bold" />
