--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -72,6 +72,7 @@
                     android:background="#ffffff"
                     android:gravity="center"
                     android:hint="@string/email"
+                    android:text="biyeta2@gmail.com"
 
 
                     />
@@ -101,7 +102,7 @@
                     android:gravity="center"
                     android:hint="@string/password"
                     android:inputType="textPassword"
-
+                    android:text="12345678"
 
                     />
             </android.support.v7.widget.CardView>
