--- a/app/src/main/res/layout/mobile_verification.xml
+++ b/app/src/main/res/layout/mobile_verification.xml
@@ -47,7 +47,8 @@
         android:text="@string/message_verification"
         android:textColor="#000000"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:visibility="gone"/>
     <EditText
         android:id="@+id/verifycode_editText"
         android:layout_width="wrap_content"
@@ -59,13 +60,14 @@
         android:hint="@string/varification_code"
         android:textColor="#000000"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/code_submit_button1"
-        android:layout_width="140dp"
+        android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_below="@+id/verifycode_editText"
-        android:text="@string/code_submit_button"
+        android:text="@string/code_sent_button"
         android:padding="10dp"
         android:background="@drawable/buttonshape"
         android:textColor="#FFFFFF"
@@ -76,9 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/code_submit_button1"
-        android:text="@string/code_sent_button"
+        android:text="@string/again_verification"
         android:textColor="@color/text3_font"
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
