--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -32,7 +32,7 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="wrap_content"
                     app:layout_collapseMode="parallax">
 
                     <android.support.v4.view.ViewPager
@@ -46,7 +46,7 @@
                     <ImageView
                         android:id="@+id/user_profile_image"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                     <RelativeLayout
