--- a/app/src/main/res/layout/expire_connection.xml
+++ b/app/src/main/res/layout/expire_connection.xml
@@ -5,20 +5,43 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
+        android:padding="5dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/expire_message_section"
             android:layout_width="match_parent"
+            android:padding="5dp"
             android:gravity="right"
+            android:orientation="vertical"
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/close_expire_connection"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-
                 android:src="@drawable/ic_highlight_off_black_24dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/expire_message"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Your Epired List is Empty"
+        android:id="@+id/empty_message"
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"
+
+
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/expire_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
