--- a/app/src/main/res/layout/communication_request_sent_from_me_item.xml
+++ b/app/src/main/res/layout/communication_request_sent_from_me_item.xml
@@ -94,7 +94,7 @@
                     android:layout_height="0dp"
                     android:text="@string/make_call">
 
-                    <Button
+                    <TextView
                         android:id="@+id/connection_button"
                         android:layout_width="wrap_content"
                         android:gravity="center"
