--- a/app/src/main/res/layout/inbox.xml
+++ b/app/src/main/res/layout/inbox.xml
@@ -2,9 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
 
     android:background="#2E3F51"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#fff" />
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
 
@@ -92,6 +97,10 @@
             android:background="#2E3F51"
             android:text="@string/expire_request"/>
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#fff" />
 
 
 
