--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -12,6 +12,7 @@
         android:layout_gravity="center"
         android:id="@+id/title_custom_toolbar"
         android:text="my Title"
+
         android:layout_centerHorizontal="true"
         android:textColor="@color/white"
 
@@ -22,6 +23,7 @@
         android:layout_height="30dp"
         android:src="@drawable/back"
         android:layout_alignParentTop="true"
+        android:tint="@color/white"
         android:layout_alignParentLeft="true"
         android:id="@+id/back"
 
