--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -10,8 +10,8 @@
         android:id="@+id/coordnatelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/r1"
-        android:fitsSystemWindows="true">
+        android:layout_above="@+id/r1">
+
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -50,11 +50,11 @@
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                     <RelativeLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="start"
+                        android:layout_gravity="bottom"
                         android:layout_marginTop="@dimen/medium_margin"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
 
                         <ImageView
@@ -66,7 +66,8 @@
                             android:background="#E6E6FA"
                             android:gravity="center"
                             android:padding="@dimen/small_padding"
-                            android:src="@drawable/editicon" />
+                            android:src="@drawable/editicon"
+                            android:visibility="gone" />
 
                     </RelativeLayout>
 
@@ -152,6 +153,8 @@
                             android:layout_height="@dimen/small_image_size"
                             android:layout_alignParentRight="true"
                             android:src="@drawable/favourite" />
+
+
                     </RelativeLayout>
 
                 </android.support.v7.widget.Toolbar>
@@ -577,11 +580,62 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
+
     <RelativeLayout
         android:id="@+id/r1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
+
+        <RelativeLayout
+            android:id="@+id/request_send_buttons_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#BDBDBD"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/cancel_imageview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="45dp"
+                android:padding="@dimen/small_padding"
+                android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/cancel_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cancel_imageview"
+                android:layout_marginLeft="45dp"
+                android:text="বাতিল করুন"
+                android:textColor="#000000" />
+
+
+            <ImageView
+                android:id="@+id/accept_imageview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="65dp"
+                android:padding="@dimen/small_padding"
+                android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/accept_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/accept_imageview"
+                android:layout_marginRight="65dp"
+                android:text="গ্রহণ করুন"
+                android:textColor="#000000" />
+
+
+        </RelativeLayout>
+
 
         <Button
             android:id="@+id/finalResultBtn"
@@ -590,6 +644,11 @@
             android:background="#D50000"
             android:text="পুরো বায়োডাটা দেখার অনুরোধ করুন"
             android:textColor="#FFFFFF"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+
     </RelativeLayout>
+
+
 </RelativeLayout>
