--- a/app/src/main/res/layout/contact_page.xml
+++ b/app/src/main/res/layout/contact_page.xml
@@ -22,10 +22,11 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/your_name"
+                android:id="@+id/user_name_contact_us"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:textSize="13dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/edit_text_border"
@@ -34,19 +35,21 @@
                 android:padding="15dp" />
 
             <EditText
-                android:id="@+id/phone_number"
+                android:id="@+id/phone_number_contact_us"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
+                android:textSize="13dp"
                 android:background="@drawable/edit_text_border"
                 android:hint="@string/contact_phone_number"
                 android:inputType="phone"
                 android:padding="15dp" />
 
             <EditText
-                android:id="@+id/email_address"
+                android:id="@+id/email_address_contact_us"
+                android:textSize="13sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -58,7 +61,7 @@
                 android:padding="15dp" />
 
             <EditText
-                android:id="@+id/your_message"
+                android:id="@+id/message_contact_us"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -69,10 +72,13 @@
                 android:gravity="top"
                 android:hint="@string/contact_message"
                 android:inputType="textMultiLine"
-                android:padding="15dp" />
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="35dp"
+                android:paddingTop="35dp"/>
 
             <Button
-                android:id="@+id/send_button"
+                android:id="@+id/send_button_contact_us"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
