--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -145,30 +145,36 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="15dp"
-            android:layout_weight="1"
+            android:layout_weight="1.1"
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <ImageView
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:layout_weight=".4"
-                android:padding="0dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/fb_icon" />
+            <!--<ImageView-->
+                <!--android:layout_width="0dip"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight=".4"-->
+                <!--android:padding="0dp"-->
+                <!--android:scaleType="fitXY"-->
+                <!--android:src="@drawable/fb_icon" />-->
 
-            <Button
-                android:id="@+id/fb_button"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="3dp"
-                android:layout_weight="1.6"
-                android:background="#3C5A99"
-                android:scaleType="fitXY"
-                android:text="@string/login"
+            <!--<Button-->
+                <!--android:id="@+id/fb_button"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_marginLeft="3dp"-->
+                <!--android:layout_weight="1.6"-->
+                <!--android:background="#3C5A99"-->
+                <!--android:scaleType="fitXY"-->
+                <!--android:text="@string/login"-->
 
-                android:textColor="#ffffff"
-                android:textSize="20sp" />
+                <!--android:textColor="#ffffff"-->
+                <!--android:textSize="20sp" />-->
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+               />
 
 
         </LinearLayout>
