--- a/app/src/main/res/layout/common_user_profile_item.xml
+++ b/app/src/main/res/layout/common_user_profile_item.xml
@@ -23,8 +23,8 @@
                 android:id="@+id/profile_image"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
-                android:padding="@dimen/medium_padding"
+                android:layout_weight="1.3"
+                android:padding="@dimen/small_padding"
                 android:scaleType="fitXY"
                 android:src="@drawable/fake_image"
                   />
@@ -32,7 +32,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3.8"
+                android:layout_weight="3.7"
                 android:padding="3dp"
 
                 android:weightSum="5.8"
