--- a/app/src/main/res/layout/biodata_layout_item.xml
+++ b/app/src/main/res/layout/biodata_layout_item.xml
@@ -84,6 +84,8 @@
                         android:id="@+id/phone"
                         android:layout_width="match_parent"
                         android:layout_weight="5"
+                        android:textSize="8sp"
+                        android:lines="1"
                         android:layout_height="0dp"
                         android:text="@string/make_call"/>
 
