--- a/app/src/main/res/layout/common_user_profile_item.xml
+++ b/app/src/main/res/layout/common_user_profile_item.xml
@@ -63,7 +63,7 @@
 
 
                         android:layout_height="match_parent"
-                        android:padding="5dp"
+                        android:padding="0dp"
                         android:layout_gravity="bottom"
                         android:src="@drawable/smile"
 
@@ -76,7 +76,7 @@
                         android:layout_height="match_parent"
                         android:textColor="#440b0a0a"
                         android:text="7 fev '17"
-
+                        android:textSize="8sp"
                         android:tint="@color/colorPrimaryDark"
                         android:layout_toRightOf="@+id/user_name"/>
                 </LinearLayout>
