--- a/app/src/main/res/layout/biodata_request_from_me.xml
+++ b/app/src/main/res/layout/biodata_request_from_me.xml
@@ -58,7 +58,18 @@
                         android:text="User Name"
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/medium_textsize" />
+                    <ImageView
+                        android:visibility="invisible"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
 
+
+                        android:layout_height="match_parent"
+                        android:padding="0dp"
+                        android:layout_gravity="bottom"
+                        android:src="@drawable/smile"
+
+                        android:layout_toRightOf="@+id/user_name"/>
                     <TextView
                         android:id="@+id/date_time"
                         android:layout_width="0dp"
@@ -67,7 +78,7 @@
                         android:layout_height="match_parent"
                         android:textColor="#440b0a0a"
                         android:text="7 fev '17"
-
+                        android:textSize="8sp"
                         android:tint="@color/colorPrimaryDark"
                         android:layout_toRightOf="@+id/user_name"/>
                 </LinearLayout>
