--- a/app/src/main/res/layout/activity_send_request.xml
+++ b/app/src/main/res/layout/activity_send_request.xml
@@ -8,24 +8,24 @@
     tools:context=".activity.SendRequestActivity"
     android:fitsSystemWindows="true">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#FFFFFF"
-        android:minHeight="?attr/actionBarSize">
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:background="#FFFFFF"-->
+        <!--android:minHeight="?attr/actionBarSize">-->
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="আপনাকে পাঠানো অনুরোধ"
-            android:textAlignment="center"
-            android:textColor="#F44336"
-            android:textSize="@dimen/medium_textsize"
-            android:textStyle="bold" />
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="আপনাকে পাঠানো অনুরোধ"-->
+            <!--android:textAlignment="center"-->
+            <!--android:textColor="#F44336"-->
+            <!--android:textSize="@dimen/medium_textsize"-->
+            <!--android:textStyle="bold" />-->
 
 
-    </android.support.v7.widget.Toolbar>
+    <!--</android.support.v7.widget.Toolbar>-->
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
