--- a/app/src/main/res/layout/common_user_profile_item.xml
+++ b/app/src/main/res/layout/common_user_profile_item.xml
@@ -23,16 +23,15 @@
                 android:id="@+id/profile_image"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3"
-                android:padding="@dimen/small_padding"
-                android:scaleType="fitXY"
+                android:layout_weight="1.5"
+                android:padding="10dp"                android:scaleType="fitXY"
                 android:src="@drawable/fake_image"
                   />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3.7"
+                android:layout_weight="3.5"
                 android:padding="3dp"
 
                 android:weightSum="5.8"
