implement favorite and smiley btn action and server response

--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -85,7 +85,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_marginLeft="@dimen/medium_margin"
-                        android:text="hellow world"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="@dimen/medium_textsize"
                         android:textStyle="bold" />
