implement user verification feature

--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -251,7 +251,8 @@
                                 android:id="@+id/mobile_layout"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1">
+                                android:layout_weight="1"
+                                android:visibility="visible">
 
                                 <ImageView
                                     android:id="@+id/mobileImage"
@@ -262,20 +263,23 @@
                                     android:src="@drawable/mobile" />
 
                                 <ImageView
+                                    android:id="@+id/mobile_check_icon"
                                     android:layout_width="@dimen/check_image_size"
                                     android:layout_height="@dimen/check_image_size"
                                     android:layout_alignParentRight="true"
                                     android:layout_alignParentTop="true"
                                     android:layout_marginRight="@dimen/check_image_right_margin"
                                     android:layout_marginTop="@dimen/check_image_top_margin"
-                                    android:src="@drawable/check_icon" />
+                                    android:src="@drawable/check_icon"
+                                    android:visibility="invisible" />
                             </RelativeLayout>
 
                             <RelativeLayout
                                 android:id="@+id/facebook_layout"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1">
+                                android:layout_weight="1"
+                                android:visibility="visible">
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -286,13 +290,15 @@
                                     android:src="@drawable/facebook" />
 
                                 <ImageView
+                                    android:id="@+id/fb_check_icon"
                                     android:layout_width="@dimen/check_image_size"
                                     android:layout_height="@dimen/check_image_size"
                                     android:layout_alignParentRight="true"
                                     android:layout_alignParentTop="true"
                                     android:layout_marginRight="@dimen/check_image_right_small_margin"
                                     android:layout_marginTop="@dimen/check_image_top_margin"
-                                    android:src="@drawable/check_icon" />
+                                    android:src="@drawable/check_icon"
+                                    android:visibility="invisible" />
                             </RelativeLayout>
 
 
@@ -300,7 +306,8 @@
                                 android:id="@+id/mail_layout"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1">
+                                android:layout_weight="1"
+                                android:visibility="visible">
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -310,6 +317,7 @@
                                     android:src="@drawable/mail" />
 
                                 <ImageView
+                                    android:id="@+id/mail_check_icon"
                                     android:layout_width="@dimen/check_image_size"
                                     android:layout_height="@dimen/check_image_size"
                                     android:layout_alignParentRight="true"
@@ -317,7 +325,7 @@
                                     android:layout_marginRight="@dimen/check_image_right_margin"
                                     android:layout_marginTop="@dimen/check_image_top_margin"
                                     android:src="@drawable/check_icon"
-                                    android:visibility="gone" />
+                                    android:visibility="invisible" />
                             </RelativeLayout>
 
 
