--- a/app/src/main/res/layout/account_recharge.xml
+++ b/app/src/main/res/layout/account_recharge.xml
@@ -34,6 +34,17 @@
                 android:background="#FFFFFF"
                 android:textColor="@color/balance_title"/>
             <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/every_payment"
+                android:textSize="20sp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:gravity="center"
+                android:background="#FFFFFF"
+                android:textColor="@color/recharge_descrip1"/>
+            <TextView
                 android:id="@+id/account_recharge_descrip1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -127,6 +138,7 @@
                 android:textSize="20sp"/>
 
             <EditText
+                android:enabled="false"
                 android:id="@+id/recharge_amountET"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -154,6 +166,7 @@
                 android:textSize="20dp" />
 
             <Button
+                android:enabled="false"
                 android:id="@+id/recharge_Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
